# Cursed-Tomorrow

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  desktop.ini  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
docs/: architecture.md  deployment.md  security-architecture.md  system-design.md
include/CursedTomorrow/Core/: Config.hpp  Game.hpp  ResourceManager.hpp
include/CursedTomorrow/Entities/: Character.hpp
src/: main.cpp
src/Core/: Game.cpp  ResourceManager.cpp
src/Entities/: Character.cpp
src/tests/: test_main.cpp
